--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ anyio==4.10.0
 bcrypt==4.0.1
 click==8.2.1
 colorama==0.4.6
+dnspython==2.8.0
 ecdsa==0.19.1
+email-validator==2.3.0
 fastapi==0.116.1
 greenlet==3.2.4
 h11==0.16.0
@@ -16,6 +18,7 @@ pydantic_core==2.33.2
 PyJWT==2.10.1
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-multipart==0.0.20
 rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
