--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.11.0
+bcrypt==5.0.0
 cached-property==2.0.1
 click==8.3.0
 colorama==0.4.6
@@ -24,3 +25,4 @@ typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.35.0
+winotify==1.1.0
