--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pydantic==2.12.0
 pydantic_core==2.41.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
+pytz==2025.2
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlalchemy-orm==1.2.10
@@ -24,5 +25,6 @@ starlette==0.47.3
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzdata==2025.2
 uvicorn==0.35.0
 winotify==1.1.0
